# mastr-tool

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  benchmark_imports.md  docker-compose.yaml  download-mastr.sh  enrich_mastr.py  export_mastr.py  get_mastr_url.py  import_mastr.py  main.py  mastr-join-files.py  pyproject.toml  requirements.txt  scheduler.py
db/: db_utils.py  entities.py  polars_schema.py  udf.sql
enricher/: cache.py  enricher.py
httpd-static/: Dockerfile
httpd-static/conf/apache/vhosts/: 00-basic.conf  10-static.conf
sql-statements/: solar.sql  wind.sql
utils/: mastr_logger.py
webapp/: mastr_app.py  requirements.txt
webapp/assets/: impressum.md  styles.css
webapp/mastr_webapp/: constants.py  download.py  impressum.py  strings.py  styles.py  tables.py  util.py  util_web.py
