[project]
name = "mastr-tool"
version = "0.1.0"
description = "Webandwendung mit aufbereiteten Daten des Marktstammdatenregisters und alternative Formate zum Download."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "polars>=1.30.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
]
